--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,13 @@
 
 {
+  "version": 2,
+  "public": true,
+  "cleanUrls": true,
+  "outputDirectory": ".",
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ],
-  "cleanUrls": true
+  ]
 }
