feat: Rename project to Vercel static demo
Updates project name, title, and description to reflect its purpose as a static demonstration for Vercel deployments. Removes specific AI-related branding and dependencies to simplify the project's scope.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 
 {
-  "name": "commitwise-ai",
+  "name": "vercel-static-demo",
   "version": "1.0.0",
   "private": true,
-  "description": "AI-powered Git commit message generator for Vercel/GitHub demo.",
-  "engines": {
-    "node": ">=20.0.0"
-  }
+  "description": "A pure static page for Vercel/GitHub deployment verification."
 }
